# kernel_ci_center

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  repackage-toolchain.yml  scheduled-build.yml  upstream-check.yml
config/: devices.toml
src/: config.rs  main.rs  pipeline.rs  release.rs  util.rs
